<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.madwak.e_maaplication.Login">

    <TextView
        android:id="@+id/login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title_login"
        android:textSize="@dimen/_25sdp"
        android:layout_marginTop="100dp"
    />
    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/size_editText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/login_activity"
        android:inputType="text"
    />
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/size_editText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/password"
        android:textAlignment="center"
        android:inputType="textPassword"
    />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/size_editText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btnLogin"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/password"
    />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/size_editText"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/registrasi"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/btnLogin"
    />
</RelativeLayout>
